tests222/tests2/test264.out
lli: <stdin>:1:1: error: expected top-level entity
line 3: function x is not defined
^
